# astyle

./: CMakeLists.txt  LICENSE.md  README.md
AStyle/: CMakeLists.txt
AStyle/doc/: astyle.html  development.html  install.html  news.html  notes.html  styles.css
AStyle/src/: ASBeautifier.cpp  ASEnhancer.cpp  ASFormatter.cpp  ASLocalizer.cpp  ASLocalizer.h  ASResource.cpp  astyle.h  astyle_main.cpp  astyle_main.h
AStyleTest/file-bat/: clang-format-astyle.bat
AStyleTest/file-py/: astyle-python.pyproj  cppcheck.py  dist_copy_xp.py  libastyle.py  libextract.py  locale_testi18n_mingw.py  naming.py
AStyleTest/file-sh/: clang-tidy.sh  val-astyletest.sh  val-astyletestcon.supp  val-astyletestloc.sh
AStyleTest/src/: AStyleTest_AlignPointer.cpp
AStyleTest/srcloc/: AStyleTestLoc_Main.cpp
AStyleTest/srcx/: LeakDetector.cpp  TersePrinter.cpp
AStyleWx/: CMakeLists.txt
AStyleWx/doc/: notes.html  static.html
AStyleWx/src/: ASEditor.cpp  AStyleDlg.cpp  AStyleIFace.cpp  AStyleIFace.h  AStyleWx.h  Config.cpp
AStyleWxTest/file-bat/: cmake-wx-mingw-dll.bat
AStyleWxTest/file-py/: astylewx-python.pyproj  gendlg_astyledlgbase_lnx.py  libastylewx.py  naming_wx.py
AStyleWxTest/file-sh/: cmake-wx-clang.sh  cmake-wx-intel.sh
AStyleWxTest/src/: Config_Test.cpp
branches/astyle-beta-branch/AStyle/doc/: astyle.html  install.html  news.html  styles.css  subversion.html
branches/astyle-beta-branch/AStyle/src/: ASBeautifier.cpp  ASFormatter.cpp  ASResource.cpp  astyle.h  astyle_main.cpp  astyle_main.h
branches/astyle-beta-branch/AStyleDev/src-c/: SciTE.properties
branches/astyle-beta-branch/AStyleDev/src-j/: SciTE.properties
branches/astyle-beta-branch/AStyleDev/src-p/: SciTE.properties
branches/astyle-beta-branch/AStyleTest/file-bat/: astyle-clang.bat
branches/astyle-beta-branch/AStyleTest/file-py/: astyle-python.pyproj  format_project.py  format_pylint.py  format_python.py  libastyle.py  locale_testi18n_bcc.py  pylintrc  regression1_test.py  regression2_test.py  system_test.py
branches/astyle-beta-branch/AStyleTest/file-sh/: cmake-clang.sh  cmake-gcc.sh  cmake-intel.sh  val-astyletesti18n.supp  val-astyletestlib.supp
branches/astyle-beta-branch/AStyleTest/src/: AStyleTest_Cpp0x.cpp  AStyleTest_Main.cpp
branches/astyle-beta-branch/AStyleTest/srccon/: AStyleTestCon_Console3.cpp  AStyleTestCon_Main.cpp
branches/astyle-beta-branch/AStyleTest/srci18n/: AStyleTestI18n_I18n.cpp
branches/astyle-beta-branch/AStyleTest/srclib/: AStyleTestLib_Main.cpp
branches/astyle-beta-branch/AStyleTest/srcloc/: AStyleTestLoc.cpp
branches/astyle-beta-branch/AStyleTest/srcx/: TersePrinter.h
branches/astyle-beta-branch/AStyleWx/dialog/: EditorDlgBase.cpp  EditorDlgBase.h
branches/astyle-beta-branch/AStyleWx/doc/: install.html  notes.html
branches/astyle-beta-branch/AStyleWx/doc-3.1/: index.html  install.html  notes.html
branches/astyle-beta-branch/AStyleWx/src/: ASApp.cpp  ASEditor.cpp  AStyleFormat.cpp  AStyleFormat.h  AStyleWx.cpp  Encoding.cpp  FileManager.cpp  Indent.cpp
branches/astyle-beta-branch/AStyleWxTest/file-bat/: cppcheck-naming-wxtest.bat  mingw-wx-compile.bat
branches/astyle-beta-branch/AStyleWxTest/file-py/: astylewx-python.pyproj  change_static_wx31.py  cppcheck_wx.py  dist_copy_wx.py  to_xxbook.py
branches/astyle-beta-branch/AStyleWxTest/file-sh/: cmake-wx-gcc.sh
branches/astyle-beta-branch/AStyleWxTest/src/: Config_Test.cpp  Main_Test.cpp
doc/: astyle.html  development.html  index.html  install.html  links.html  news.html  newsArchives.html  notes.html  notesArchives.html  styles.css  subversion.html
file/: README.md
man/: astyle.1
sh-completion/: astyle.bash  astyle.fish  astyle.zsh  gen-completions
src/: ASBeautifier.cpp  ASEnhancer.cpp  ASFormatter.cpp  ASLocalizer.cpp  ASLocalizer.h  ASResource.cpp  astyle.h  astyle_main.cpp  astyle_main.h
trunk/AStyle/: CMakeLists.txt
trunk/AStyle/doc/: index.html  links.html  notes.html
trunk/AStyle/src/: ASBeautifier.cpp  ASEnhancer.cpp  ASFormatter.cpp  ASLocalizer.cpp  ASLocalizer.h  ASResource.cpp  astyle.h  astyle_main.cpp
trunk/AStyleDev/doc/: sharp.html
trunk/AStyleDev/src-s/: AStyleInterface.cs
trunk/AStyleDev/src-s2/: SciTE.properties
trunk/AStyleTest/file-bat/: clang-format-confg.bat  cmake-bcc32c.bat  cmake-mingw.bat
trunk/AStyleTest/file-py/: clang_tidy.py  dist_copy.py  format_project.py  pypep8rc
trunk/AStyleTest/file-sh/: cmake-gcc.sh  val-astyletestcon.sh  val-astyletesti18n.sh  val-astyletestlib.sh  val-astyletestloc.supp
trunk/AStyleTest/src/: AStyleTest_Other.cpp
trunk/AStyleTest/srccon/: AStyleTestCon_Console1.cpp
trunk/AStyleTest/srclib/: AStyleTestLib_AStyleMain.cpp
trunk/AStyleWx/dialog/: AStyleDlgBase.cpp  AStyleDlgBase.h
trunk/AStyleWx/doc/: install.html  news.html
trunk/AStyleWx/doc-3.1/: static.html
trunk/AStyleWx/src/: AStyleDisplay.h  AStyleDlg.cpp  AStyleDlg.h  AboutDlg.cpp  EditorDlg.cpp
trunk/AStyleWxTest/file-bat/: cmake-wx-mingw-dll.bat  cmake-wx-mingw.bat  cppcheck-naming-wx.bat
trunk/AStyleWxTest/file-py/: astylewx-python.sln
trunk/AStyleWxTest/file-sh/: cmake-wx-clang.sh  cmake-wx-gcc.sh
trunk/AStyleWxTest/src/: AStyleIFace_Test.cpp
